--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "axios": "^0.27.2",
+    "firebase": "^9.10.0",
     "framer-motion": "^6.5.1",
+    "json-server": "^0.17.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
