--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.10.0",
     "framer-motion": "^6.5.1",
     "json-server": "^0.17.0",
+    "mongodb": "^4.10.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
